src-ken&y/objects/Allowance_Applied__c.object
<CustomObject>
    <customHelpPage>HelpAllowanceApplied</customHelpPage>
    <fields>
        <fullName>Allowance_Amount__c</fullName>
        <label>Allowance Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allowance_Applied__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allowance Applied</label>
        <referenceTo>Allowance_Applied__c</referenceTo>
        <relationshipLabel>Allowances Applied</relationshipLabel>
        <relationshipName>Allowances_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowance_Class__c</fullName>
        <label>Allowance Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance_Code__c</fullName>
        <label>Allowance Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowance_Rule2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Allowance Rule</label>
        <referenceTo>Allowance_Rule__c</referenceTo>
        <relationshipLabel>Allowances Applied (Allowance Rule)</relationshipLabel>
        <relationshipName>Allowances_Applied1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Allowance_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Allowance Type</label>
        <referenceTo>Allowance_Type__c</referenceTo>
        <relationshipLabel>Allowances Applied</relationshipLabel>
        <relationshipName>Allowances_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Beneficiary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Beneficiary</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bill To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Allowances Applied</relationshipLabel>
        <relationshipName>Allowances_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BillBack_Commitment__c</fullName>
        <label>BillBack Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BillBack_Percent__c</fullName>
        <label>BillBack Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BillBack_Rate__c</fullName>
        <label>BillBack Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>Sales_Order_Line__r.Sales_Order__r.Currency__r.ISO_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Invoice</label>
        <referenceTo>Customer_Invoice__c</referenceTo>
        <relationshipLabel>Allowances Applied (Customer Invoice)</relationshipLabel>
        <relationshipName>Allowances_Applied1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Invoice_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Invoice Line</label>
        <referenceTo>Customer_Invoice_Line__c</referenceTo>
        <relationshipLabel>Allowances Applied</relationshipLabel>
        <relationshipName>Allowances_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fulfillment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fulfillment</label>
        <referenceTo>Fulfillment__c</referenceTo>
        <relationshipLabel>Allowances Applied</relationshipLabel>
        <relationshipName>Allowances_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lump_Sum__c</fullName>
        <label>Lump Sum</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Invoice_Paid__c</fullName>
        <label>Off Invoice Paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Off_Invoice_Percent__c</fullName>
        <label>Off Invoice Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Off_Invoice_Rate__c</fullName>
        <label>Off Invoice Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_Time__c</fullName>
        <formula>Allowance_Type__r.One_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Value__c</fullName>
        <label>Override Value</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Line</label>
        <referenceTo>Sales_Order_Line__c</referenceTo>
        <relationshipLabel>Allowances Applied</relationshipLabel>
        <relationshipName>Allowances_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Allowances Applied</relationshipLabel>
        <relationshipName>Allowances_Applied</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scan__c</fullName>
        <label>Scan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Trade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stacking_Group__c</fullName>
        <label>Stacking Group</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Key to ensure that we do not duplicate allowances when generating or adding new allowances</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Allowance Applied</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Amount__c</columns>
        <columns>Allowance_Type__c</columns>
        <columns>Customer_Invoice_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detailed</fullName>
        <columns>NAME</columns>
        <columns>Allowance_Amount__c</columns>
        <columns>Allowance_Type__c</columns>
        <columns>Sales_Order__c</columns>
        <columns>Sales_Order_Line__c</columns>
        <columns>Customer_Invoice2__c</columns>
        <columns>Customer_Invoice_Line__c</columns>
        <filterScope>Everything</filterScope>
        <label>Detailed</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Allowances Applied</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Dont_allow_reparent</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNEW())
 &amp;&amp;
ISCHANGED(Allowance_Type__c)

 &amp;&amp;
NOT(ISBLANK(PRIORVALUE(Allowance_Type__c)))</errorConditionFormula>
        <errorDisplayField>Allowance_Type__c</errorDisplayField>
        <errorMessage>Can&apos;t reparent Allowance Applied to different Allowance Type</errorMessage>
    </validationRules>
</CustomObject>